# Aurora

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/core/: StaticArray.h  arena.h  asserts.cpp  asserts.h  logger.cpp  logger.h  memory.h  span.h  stackarray.h  string.cpp  string.h  types.h
src/platform/: platform.cpp  platform.h  window.cpp  window.h
src/renderer/: Gpu.cpp  Gpu.h  auroravulkan.h  renderer.cpp  renderer.h
src/renderer/win/: Surface.cpp
